Cleaning up some utility functions, adding unit tests